--- a/style.css
+++ b/style.css
@@ -11,5 +11,81 @@ nav{
     width: 100%;
     background: #ecf0f3;
     padding: 12px 0;
+    box-shadow: -3px -3px 7px #ffffff,
+                3px 3px 5px #ceced1;
+}
+nav .menu{
+    max-width: 1270px;
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu .logo a{
+    font-size: 28px;
+    font-weight: 600;
+    text-decoration: none;
+    color:#31344b;
+}
+
+.menu ul{
+    list-style: none;
+    display: flex;
+}
+
+.menu ul a{
+    margin: 0 8px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #31344b;
+    font-weight: 400;
+    display: inline-flex;
+    padding: 10px 12px;
+    box-shadow: -3px -3px 7px #ffffff,
+                3px 3px 5px #ceced1;
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.menu ul a:hover:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset -3px -3px 7px #ffffff,
+               inset 3px 3px 5px #ceced1;
+}
+
+.menu ul a:hover{
+    color: #3498db;
+}
+@media (max-width:940px){
+    .menu ul{
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        max-width: 400px;
+        padding-top: 45px;
+        height: 100%;
+        background: #ecf0f3;
+        box-shadow: 0 5px 10px #b0b0b5;
+        z-index: 12;
+    }
+    .menu ul a{
+        display: block;
+        font-size: 23px;
+        margin-top: 30px;
+        box-shadow: none;
+        text-align: center;
+    }
+    .menu ul a:hover:before{
+        box-shadow: none;
+    }
 
 }
